--- a/registerPage.html
+++ b/registerPage.html
@@ -68,7 +68,7 @@
       </div>
     <div class="container2">
         <div class="col-md-6">
-          <h3>Our restaurent</h3>
+          <h3>Our restaurant</h3>
           <p>123 Road of food</p>
           <p>75000 London</p>
         </div>
