--- a/consultprofil.html
+++ b/consultprofil.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="consultstyle.css">
 </head>
 <body>
-    <header> 
-        <img class="logo" src="images/3.png" alt="logo">
-    </header>
+  <header>
+    <img class="logo" src="images/3.png" alt="logo">
+    <nav class="navigation">
+        <a id ="nav-link" href="#">Home</a>
+        <a id ="nav-link" href="#">Products</a>
+        <a id ="nav-link" href="#">Contact</a>
+        <button class="btnLogin-popup">Login</button>
+        <a href="#"><img src="images/panier.png" alt="basket icon"></a>
+    </nav>     
+</header>
     <main>
         
       <div class="wrapper Consult">
